<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SnapHunt</string>
    <string name="registration">Register</string>
    <string name="login_text">username</string>
    <string name="password_text">password</string>
    <string name="register_text">Register an account</string>
    <string name="login_button_text">Login</string>
    <string name="logo_description">SnapHunt Logo</string>
    <string name="register_title">Register</string>
    <string name="register_username"> username</string>
    <string name="register_password"> password</string>
    <string name="register_verify_password">verify</string>
    <string name="register_email">email</string>
    <string name="password_verification">verification indicator</string>
    <string name="register_button_text">Submit</string>
    <string name="title_activity_games_overview">GamesOverview</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_create_game">CreateGame</string>
    <string name="title_activity_theme_picker">ThemePicker</string>
    <string name="title_activity_gameplay">Gameplay</string>
    <string name="title_activity_round_summary">RoundSummary</string>
    <string name="title_activity_gameplay_judge">GameplayJudge</string>

    <string name="create_game_group_name">Group Name</string>
    <string name="create_game_group_name_hint"> name</string>
    <string name="create_game_invite_players">Add Players</string>
    <string name="create_game_player1_button_text">P1</string>
    <string name="create_game_player2_button_text">P2</string>
    <string name="create_game_player3_buttont_text">P3</string>
    <string name="create_game_enter_username">Enter Username</string>
    <string name="create_game_enter_username_hint">Enter username or leave blank for random!</string>
    <string name="create_game_round_length">Round Length [Hours]</string>
    <string name="create_game_round_length_opt_1">4</string>
    <string name="create_game_round_length_opt_2">12</string>
    <string name="create_game_round_length_opt_3">24</string>
    <string name="create_game_points_to_win">Points to Win</string>
    <string name="create_game_points_to_win_opt1">3</string>
	<string name="create_game_points_to_win_opt2">5</string>
    <string name="create_game_points_to_win_opt3">10</string>
 	<string name="create_game_button_start">Start Game</string>

    <string name="games_overview_new_game_button_text">New Game</string>
    <string name="games_overview_active_games">Active Games</string>
    <string name="games_overview_game_invitations">Invitations</string>
    <string name="gameview_timeleft">0:00 Left</string>
    <string name="gameview_groupname">GroupName</string>
    <string name="gameview_current_theme">_</string>
    <string name="gameview_player">player</string>
<<<<<<< HEAD
<<<<<<< HEAD
    <string name="gameview_player1">_</string>
    <string name="gameview_player2">_</string>
	<string name="gameview_player3">_</string>
	<string name="gameview_player4">_</string>
	
	<string name="gameview_theme">Theme:</string>
        
    
=======
>>>>>>> 8d103c88ef582ec542c9984badd605e1c3f70435
=======
>>>>>>> 8d103c88ef582ec542c9984badd605e1c3f70435

    <string name="theme_picker_title">Pick a Theme</string>
    <string name="theme_picker_hint">enter theme</string>
    <string name="theme_picker_submit_button">Submit</string>

<<<<<<< HEAD
<<<<<<< HEAD
    <string name="gameplay_timeleft"></string>
=======
=======
>>>>>>> 8d103c88ef582ec542c9984badd605e1c3f70435
    <string name="gameplay_timeleft">Time left 0:00</string>
>>>>>>> 8d103c88ef582ec542c9984badd605e1c3f70435
    <string name="gameplay_theme">Playing "theme"</string>

    <string name="gameplay_judge">Pick your favorite!</string>
    <string name="gameplay_judge_submit_button">Submit</string>

    <string name="round_summary_done_button">Done</string>

	<string name="snap_hunt_SNAP">Snap</string>
	<string name="snap_hunt_HUNT">Hunt</string>
<<<<<<< HEAD
<<<<<<< HEAD
	
	<string name="NULL"></string>
	
	
=======
>>>>>>> 8d103c88ef582ec542c9984badd605e1c3f70435
=======
>>>>>>> 8d103c88ef582ec542c9984badd605e1c3f70435

</resources>

