<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
		    android:id="@+id/create_game_scrollView"
		    android:layout_width="match_parent"
		    android:layout_height="match_parent"
		    android:fillViewport="true">
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:background="@drawable/background"
    	android:focusable="true"
	    android:descendantFocusability="beforeDescendants"
		android:focusableInTouchMode="true"
	    android:windowSoftInputMode="stateHidden"
	     >
		 <RelativeLayout
		    android:layout_width="match_parent"
	        android:layout_height="0dp"
	        android:layout_weight=".5" >

		    <TextView
		        android:id="@+id/create_game_group_name"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/create_game_group_name"
		        android:textSize="30sp"
		        android:textColor="@color/grey_text"
		        android:layout_marginTop="15dp"
		        android:layout_marginLeft="15dp" />

		    <EditText
		        android:id="@+id/create_game_group_name_text"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_below="@id/create_game_group_name"
		        android:layout_margin="10dp"
		        android:padding="10dp"
		        android:ems="10"
		        android:hint="@string/create_game_group_name_hint"
		        android:textColor="@color/grey_text"
		        android:background="@drawable/border" >


		    </EditText>

		  </RelativeLayout>
		<RelativeLayout
		    android:layout_width="match_parent"
	        android:layout_height="0dp"
	        android:layout_weight="1.25" >

		    <TextView
		        android:id="@+id/create_game_invite_players"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/create_game_invite_players"
		        android:textSize="30sp"
		        android:textColor="@color/grey_text"
		        android:layout_marginTop="10dp"
		        android:layout_marginLeft="15dp" />

		    <RelativeLayout
		        android:id="@+id/create_game_invite_players_layout"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginLeft="10dp"
		        android:layout_marginRight="10dp"
		        android:layout_margin="10dp"
		        android:layout_below="@id/create_game_invite_players"
		         >

		        <ImageButton
		            android:contentDescription="@string/create_game_player2_button_text"
		            android:id="@+id/create_game_player2"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
					android:layout_centerHorizontal="true"
		            android:layout_alignParentTop="true"
		            android:layout_marginRight="30dp"
		            android:layout_marginLeft="30dp"
		            android:src="@drawable/blank_head"
		            android:clickable="true"
		            android:alpha="1.0" />

		        <ImageButton
		            android:contentDescription="@string/create_game_player1_button_text"
		            android:id="@+id/create_game_player1"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
					android:layout_toLeftOf="@id/create_game_player2"
		            android:layout_alignParentTop="true"
		            android:src="@drawable/blank_head"
		            android:clickable="true"
		            android:alpha="1.0" />

		        <ImageButton
		            android:contentDescription="@string/create_game_player3_buttont_text"
		            android:id="@+id/create_game_player3"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_alignParentTop="true"
					android:layout_toRightOf="@id/create_game_player2"
		            android:src="@drawable/blank_head"
		            android:clickable="true"
		            android:alpha="1.0" />
		        </RelativeLayout>
		         <TextView
			        android:id="@+id/create_game_enter_username"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_below="@id/create_game_invite_players_layout"
			        android:text="@string/create_game_enter_username"
			        android:textColor="@color/grey_text"
			        android:layout_marginTop="10dp"
			        android:layout_marginLeft="15dp" />
			  <EditText
			        android:id="@+id/create_game_p1uname"
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:textColor="@color/grey_text"
			        android:layout_below="@id/create_game_enter_username"
			        android:hint="@string/create_game_enter_username_hint"
			        android:layout_margin="10dp"
			        android:padding="10dp"
			        android:ems="10"
					android:background="@drawable/border"/>
			    <EditText
			        android:id="@+id/create_game_p2uname"
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:textColor="@color/grey_text"
			        android:layout_below="@id/create_game_p1uname"
			        android:hint="@string/create_game_enter_username_hint"
			        android:layout_margin="10dp"
			        android:padding="10dp"
			        android:ems="10"
					android:background="@drawable/border"/>
			     <EditText
			        android:id="@+id/create_game_p3uname"
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:textColor="@color/grey_text"
			        android:layout_below="@id/create_game_p2uname"
			        android:hint="@string/create_game_enter_username_hint"
			        android:layout_margin="10dp"
			        android:padding="10dp"
			        android:ems="10"
					android:background="@drawable/border"/>

		</RelativeLayout>

		<RelativeLayout
		    android:layout_width="match_parent"
		    android:layout_height="0dp"
		    android:layout_weight="0.5"
		    android:layout_marginTop="20dp" >

		    <Button
		        android:id="@+id/create_game_start_button"
		        android:layout_width="match_parent"
		        android:layout_height="match_parent"
		        android:layout_alignParentBottom="true"
		        android:layout_centerHorizontal="true"
		        android:layout_centerVertical="true"
		        android:layout_margin="10dp"
		        android:layout_marginBottom="20dp"
		        android:alpha="0.95"
		        android:background="@color/login_button_background"
		        android:clickable="true"
		        android:onClick="startThemePicker"
		        android:text="@string/create_game_button_start"
		        android:textColor="@color/grey_text" />
		</RelativeLayout>

	</LinearLayout>
</ScrollView>