<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/welcome_scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true" >
	
	<LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical" 
	    android:background="@drawable/background"
		android:focusable="true"
		android:descendantFocusability="beforeDescendants"
		android:focusableInTouchMode="true"
		android:windowSoftInputMode="stateHidden" >

		<RelativeLayout
	        android:layout_width="match_parent"
	        android:layout_height="0dp"
	        android:layout_weight="1" >

			<ImageView
			    android:contentDescription="@string/app_name"
			    android:id="@+id/games_overview_snap_hunt_logo"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_alignParentLeft="true"
			    android:layout_centerVertical="true"
			    android:layout_marginRight="60dp"
			    android:layout_marginLeft="60dp"
			    android:layout_marginTop="10dp"
			    android:layout_marginBottom="10dp"
			    android:src="@drawable/ic_snaphunt_logo" />

			<Button
			    android:id="@+id/games_overview_new_game_button"
			    android:layout_width="wrap_content"
			    android:layout_height="match_parent"
			    android:layout_centerInParent="true"
			    android:layout_alignParentRight="true"
			    android:layout_marginLeft="30dp"
			    android:layout_marginRight="15dp"
			    android:layout_marginTop="10dp"
			    android:layout_toRightOf="@id/games_overview_snap_hunt_logo"
			    android:text="@string/games_overview_new_game_button_text"
			    android:background="@drawable/button_background_with_border"
			    android:textColor="@color/grey_text"
			    android:clickable="true"
			    android:onClick="startCreateGame"
			     />

		</RelativeLayout>

		<RelativeLayout
	        android:layout_width="match_parent"
	        android:layout_height="0dp"
	        android:layout_weight="2" >

			<TextView
			    android:id="@+id/games_overview_active_games"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_alignParentLeft="true"
			    android:layout_alignParentTop="true"
			    android:layout_marginTop="15dp"
			    android:layout_marginLeft="20dp"
			    android:text="@string/games_overview_active_games"
			    android:textColor="@color/grey_text" />

			<LinearLayout
			    android:id="@+id/games_overvew_games_list"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:orientation="vertical"
				android:layout_below="@id/games_overview_active_games"			    
			    android:layout_centerHorizontal="true"
			    android:layout_margin="20dp" >
			</LinearLayout>

		</RelativeLayout>

		<RelativeLayout
	        android:layout_width="match_parent"
	        android:layout_height="0dp"
	        android:layout_weight="4" >

			<TextView
			    android:id="@+id/games_overview_invitations"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_alignParentLeft="true"
			    android:layout_alignParentTop="true"
			    android:layout_marginLeft="20dp"
			    android:layout_marginTop="15dp"
			    android:text="@string/games_overview_game_invitations"
			    android:textColor="@color/grey_text" />

			<LinearLayout
			    android:id="@+id/games_overview_invitations_list"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:orientation="vertical"
			    android:layout_margin="20dp"
			    android:layout_below="@id/games_overview_invitations" >
			</LinearLayout>

		</RelativeLayout>
	
	</LinearLayout>

</ScrollView>